--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/nepali-date-converter/dist/nepali-date-converter.umd.js"></script>
+    <script
+      src="https://nepalidatepicker.sajanmaharjan.com.np/nepali.datepicker/js/nepali.datepicker.v4.0.1.min.js"
+      type="text/javascript"
+    ></script>
+    <script type="text/javascript"></script>
   </body>
 </html>
